<?xml version = "1.0" encoding = "utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:id="@+id/nav_menu">
        <!-- <item
             android:id="@+id/nav_my_account"
             android:icon="@drawable/ic_suvichar"
             android:title="@string/my_account" />-->
        <item
            android:visible="true"
            android:id="@+id/new_booking"
            android:title="@string/new_booking" />
        <item
            android:visible="true"
            android:id="@+id/delivery"
            android:title="@string/delivery" />
        <item
            android:visible="true"
            android:id="@+id/logout"
            android:title="@string/logout" />

    </group>


</menu>